<resources>
    <string name="app_name">Activity Training</string>
    <string name="color">color</string>
    <string name="background">background</string>
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="alignment">alignment</string>
    <string name="left">left</string>
    <string name="center">center</string>
    <string name="right">right</string>
</resources>
